compiler/flux_hir/src/tests/snapshots/flux_hir__tests__structs__unknown_fields.snap
---
source: compiler/flux_hir/src/tests/structs.rs
expression: s
---
//  main.flx

struct Foo {
s32 x,Bar y,f32 z}

struct Bar {
u32 x}

fn main() -> () {
    let foo_instance Foo = struct Foo {
        x: 0,  foo: 0,  bar: 0,  bazz: 0
    };
}

Diagnostics

[E0027] Error: uninitialized fields in struct expression
    ,-[ main.flx:14:15]
    |
 14 | ,->     let foo_instance = Foo {
    : :   
 18 | |->         bazz: 0,
    | |                      
    | `---------------------- uninitialized fields `y`, `z` for `Foo` struct initialization
----'
[E0028] Error: unknown fields in struct expression
    ,-[ main.flx:14:15]
    |
 14 | ,->     let foo_instance = Foo {
    : :   
 18 | |->         bazz: 0,
    | |                      
    | `---------------------- unknown fields `foo`, `bar`, `bazz` for `Foo` struct initialization
----'

